[package]
name = "aul"
version = "1.0.0"
edition = "2021"
authors = ["Adriiii"]
description = "Another useless Logger"
readme = "README.md"
repository = "https://github.com/AdrisGithub/aul"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
