[package]
name = "aul"
version = "1.0.1"
edition = "2021"
authors = ["Adriiii"]
description = "Another useless Logger"
readme = "README.md"
repository = "https://github.com/AdrisGithub/aul"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/aul"

[dependencies]
colored = "2.0.4"

[features]
no-color = ["colored/no-color"]