[package]
name = "aul"
version = "1.4.1"
edition = "2021"
authors = ["Adriiii"]
description = "Another useless Logger"
readme = "README.md"
repository = "https://github.com/AdrisGithub/aul"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/aul"
categories = ["development-tools::debugging"]
keywords = ["logging"]
exclude = [".github/", "sonar-project.properties"]


[dependencies]
colored = { version = "2.1.0", optional = true }


[features]
color = ["dep:colored"]
